...
                                </textAttributes>
                                <items>
                                    <navigationItem title="USW Interest Form" id="HJf-Pd-UF6">
                                        <barButtonItem key="rightBarButtonItem" title="Admin" id="G9k-cr-Vbl">
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <connections>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="36"/>
                                                        <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="24"/>
                                                        <state key="normal" title="Submit">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
        <scene sceneID="QMX-Z5-lda">
            <objects>
                <viewController title="Admin Login" id="PNr-dr-iOo" customClass="AdminLoginViewController" customModule="RegisterInterestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="CR7-1c-KyE">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                <items>
                                    <navigationItem title="Admin Login" id="a1j-hY-vFo">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="0PV-GP-g31">
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <connections>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vgg-jv-Z3f">
                                                <rect key="frame" x="30" y="202" width="354" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="186.66666666666666" y="246" width="41" height="36"/>
                                                <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="24"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Existing Records" id="y9w-DC-UFA">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="KcN-rb-02a">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </textAttributes>
                                <items>
                                    <navigationItem title="Confirmation" id="hCB-Es-T7M">
                                        <barButtonItem key="rightBarButtonItem" title="Done" id="r6g-zA-y0W">
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <connections>
...
                                </textAttributes>
                                <items>
                                    <navigationItem title="Record" id="n8u-hg-rni">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="lFe-Hf-Urh">
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
